--- a/National Parks Portal/ayub.html
+++ b/National Parks Portal/ayub.html
@@ -376,6 +376,28 @@
       font-weight: 700;
       margin-bottom: 10px;
     }
+    .modal-content
+     {
+      background: white;
+      padding: 20px;
+      max-width: 600px;
+      width: 90%;
+      border-radius: 10px;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+      text-align: center;
+      position: relative;
+      font-family: 'Poppins', sans-serif;
+      
+    }
+    .modal-content img 
+    {
+      width: 100%;
+      height: auto;
+      max-height: 300px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-bottom: 15px;
+    }
     .modal-content p 
     {
       color: #333;
