--- a/National Parks Portal/index.html
+++ b/National Parks Portal/index.html
@@ -259,7 +259,7 @@
 
     .hero 
     {
-      background: url("./National\ Parks\ Portal/images/Deeeeers.jpg") no-repeat center center/cover;
+      background: url("Images/Deeeeers.jpg") no-repeat center center/cover;
       height: 700px;
       position: relative;
     }
@@ -351,7 +351,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-image: url("./National\ Parks\ Portal/images/forest park 2 .jpg");
+      background-image: url("images/forest\ park\ 2\ .jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -470,7 +470,7 @@
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      background-image: url("./National\ Parks\ Portal/images/animals and birds in forest .jpg");
+      background-image: url("Images/animals\ and\ birds\ in\ forest\ .jpg");
       position: relative;
     }
     .button-logos 
@@ -702,31 +702,31 @@ footer p {
   
  <nav>
     <div class="logo">
-      <a href="./index.html">
-      <img src="./National Parks Portal/Logo/pngwing.com (8).png" alt="National Parks Logo">
+      <a href="index.html">
+      <img src="Logo/pngwing.com (8).png" alt="National Parks Logo">
       </a>
       <span>National Parks Info</span>
     </div>
 
     <ul id="menu">
-      <li><a href="./index.html">Home</a></li>
-      <li><a href="./National Parks Portal/about.html">About</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
 
 
       <li class="dropdown">
         <a href="#" onclick="toggleParksDropdown(event)">Parks</a>
         <ul class="dropdown-menu">
-          <li><a href="./National Parks Portal/ayubpark.html">Ayub National Park</a></li>
-          <li><a href="./National Parks Portal/kirtharpark.html">Kirthar National Park</a></li>
-          <li><a href="./National Parks Portal/khunjerabpark.html">Khunjerab National Park</a></li>
-          <li><a href="./National Parks Portal/lalsuhanrapark.html">Lal Suhanra National Park</a></li>
-          <li><a href="./National Parks Portal/ayubiapark.html">Ayubia National Park</a></li>
+          <li><a href="ayubpark.html">Ayub National Park</a></li>
+          <li><a href="kirtharpark.html">Kirthar National Park</a></li>
+          <li><a href="khunjerabpark.html">Khunjerab National Park</a></li>
+          <li><a href="lalsuhanrapark.html">Lal Suhanra National Park</a></li>
+          <li><a href="ayubiapark.html">Ayubia National Park</a></li>
         </ul>
       </li>
-      <li><a href="./National Parks Portal/animals.html">Animals</a></li>
-      <li><a href="./National Parks Portal/birds.html">Birds</a></li>
-      <li><a href="./National Parks Portal/sitemap.html">Site Map</a></li>
-      <li><a href="./National Parks Portal/contact.html">Contact Us</a></li>
+      <li><a href="animals.html">Animals</a></li>
+      <li><a href="birds.html">Birds</a></li>
+      <li><a href="sitemap.html">Site Map</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
     </ul>
 
     <div class="hamburger" onclick="toggleMenu()">
@@ -745,7 +745,7 @@ footer p {
     <div class="overlay">
       <h1>Explore the Wonders of Nature</h1>
       <h3><p>“Where Adventure Meets Nature”</p></h3>
-      <a href="./National Parks Portal/parks.html" class="btn">Explore Parks</a>
+      <a href="parks.html" class="btn">Explore Parks</a>
     </div>
   </section>
 
@@ -762,34 +762,34 @@ footer p {
     
     <div class="park-cards">
       <div class="card">
-        <img src="./National Parks Portal/Images/LalSuhanra.jpg" alt="Lal Suhanra National Park">
+        <img src="Images/LalSuhanra.jpg" alt="Lal Suhanra National Park">
         <b><h3>Lal Suhanra National Park</h3></b>
         <b><p>Lal Suhanra Is The Largest National park In Punjab. It Is Unique For Combining Desert, Forest.</p></b>
-        <a href="./National Parks Portal/lalsuhanrapark.html">Read More</a>
+        <a href="lalsuhanrapark.html">Read More</a>
       </div>
       <div class="card">
-        <img src="./National Parks Portal/Images/ayubpark.jpg" alt="Ayub National Park">
+        <img src="Images/ayubpark.jpg" alt="Ayub National Park">
         <b><h3>Ayub National Park</h3></b>
         <b><p>Ayub National Park Is One Of The Most Famous and Largest Park In Rawalpindi, Punjab, Pakistan. Recreational & Zoo-based.</p></b>
-        <a href="./National Parks Portal/ayubpark.html">Read More</a>
+        <a href="ayubpark.html">Read More</a>
       </div>
       <div class="card">
-        <img src="./National Parks Portal/Images/Kirthar_park.jpg" alt="Kirthar National Park">
+        <img src="Images/Kirthar_park.jpg" alt="Kirthar National Park">
         <b><h3>Kirthar National Park</h3></b>
         <b><p>Kirthar National Park Is Mix Of Mountains & Desert Ecosystem, Making It One Of The Most Scenic Wildlife Reserves In Pakistan.</p></b>
-        <a href="./National Parks Portal/kirtharpark.html">Read More</a>
+        <a href="kirtharpark.html">Read More</a>
       </div>
       <div class="card">
-        <img src="./National Parks Portal/Images/Ayubia Natioanal park.jpg" alt="Ayubia National Park">
+        <img src="Images/AuybiaNationalPark.jpg" alt="Ayubia National Park">
         <b><h3>Ayubia National Park</h3></b>
         <b><p>Ayubia National Park (Abbottabad, KPk, Pakistan) Is One Of The Most Visited National Park In Northern Pakistan.</p></b>
-        <a href="./National Parks Portal/ayubiapark.html">Read More</a>
+        <a href="ayubiapark.html">Read More</a>
       </div>
       <div class="card">
-        <img src="./National Parks Portal/Images/JehurabNationalPark.jpg" alt="Khunjerab National Park">
+        <img src="Images/JehurabNationalPark.jpg" alt="Khunjerab National Park">
         <b><h3>Khunjerab National Park</h3></b>
         <b><p>Khunjerab National Park (G-B, Pakistan) A high-altitude park on the Pak–China border, famous for wildlife and mountains.</p></b>
-        <a href="./National Parks Portal/khunjerabpark.html">Read More</a>
+        <a href="khunjerabpark.html">Read More</a>
       </div>
     </div>
   </section>
@@ -807,15 +807,15 @@ footer p {
       <h3>Lal Suhanra National Park</h3>
       <div class="button-logos">
         <div class="button-logo">
-          <img src="./National Parks Portal/Images/pngwing.com (8).png" alt="Lal Suhanra Animals Logo">
+          <img src="Images/pngwing.com (8).png" alt="Lal Suhanra Animals Logo">
         </div>
         <div class="button-logo">
-          <img src="./National Parks Portal/Images/pngwing.com (9).png" alt="Lal Suhanra Birds Logo">
+          <img src="Images/pngwing.com (9).png" alt="Lal Suhanra Birds Logo">
         </div>
       </div>
       <div class="buttons">
-        <a href="./National Parks Portal/lalsuhanra.html" class="btn-wildlife">Animals</a>
-        <a href="./National Parks Portal/lalsuharabirds.html" class="btn-wildlife">Birds</a>
+        <a href="lalsuhanra.html" class="btn-wildlife">Animals</a>
+        <a href="lalsuharabirds.html" class="btn-wildlife">Birds</a>
       </div>
     </div>
 
@@ -823,15 +823,15 @@ footer p {
       <h3>Ayub National Park</h3>
       <div class="button-logos">
         <div class="button-logo">
-          <img src="./National Parks Portal/Images/pngwing.com (8).png" alt="Ayub Animals Logo">
+          <img src="Images/pngwing.com (8).png" alt="Ayub Animals Logo">
         </div>
         <div class="button-logo">
-          <img src="./National Parks Portal/Images/pngwing.com (9).png" alt="Ayub Birds Logo">
+          <img src="Images/pngwing.com (9).png" alt="Ayub Birds Logo">
         </div>
       </div>
       <div class="buttons">
-        <a href="./National Parks Portal/ayub.html" class="btn-wildlife">Animals</a>
-        <a href="./National Parks Portal/ayubbirds.html" class="btn-wildlife">Birds</a>
+        <a href="ayub.html" class="btn-wildlife">Animals</a>
+        <a href="ayubbirds.html" class="btn-wildlife">Birds</a>
       </div>
     </div>
 
@@ -839,15 +839,15 @@ footer p {
       <h3>Kirthar National Park</h3>
       <div class="button-logos">
         <div class="button-logo">
-          <img src="./National Parks Portal/Images/pngwing.com (8).png" alt="Kirthar Animals Logo">
+          <img src="Images/pngwing.com (8).png" alt="Kirthar Animals Logo">
         </div>
         <div class="button-logo">
-          <img src="./National Parks Portal/Images/pngwing.com (9).png" alt="Kirthar Birds Logo">
+          <img src="Images/pngwing.com (9).png" alt="Kirthar Birds Logo">
         </div>
       </div>
       <div class="buttons">
-        <a href="./National Parks Portal/kirthar.html" class="btn-wildlife">Animals</a>
-        <a href="./National Parks Portal/kirtharbirds.html" class="btn-wildlife">Birds</a>
+        <a href="kirthar.html" class="btn-wildlife">Animals</a>
+        <a href="kirtharbirds.html" class="btn-wildlife">Birds</a>
       </div>
     </div>
 
@@ -855,15 +855,15 @@ footer p {
       <h3>Ayubia National Park</h3>
       <div class="button-logos">
         <div class="button-logo">
-          <img src="./National Parks Portal/Images/pngwing.com (8).png" alt="Ayubia Animals Logo">
+          <img src="Images/pngwing.com (8).png" alt="Ayubia Animals Logo">
         </div>
         <div class="button-logo">
-          <img src="./National Parks Portal/Images/pngwing.com (9).png" alt="Ayubia Birds Logo">
+          <img src="Images/pngwing.com (9).png" alt="Ayubia Birds Logo">
         </div>
       </div>
       <div class="buttons">
-        <a href="./National Parks Portal/aubiya.html" class="btn-wildlife">Animals</a>
-        <a href="./National Parks Portal/ayubiabirds.html" class="btn-wildlife">Birds</a>
+        <a href="aubiya.html" class="btn-wildlife">Animals</a>
+        <a href="ayubiabirds.html" class="btn-wildlife">Birds</a>
       </div>
     </div>
 
@@ -871,15 +871,15 @@ footer p {
       <h3>Khunjerab National Park</h3>
       <div class="button-logos">
         <div class="button-logo">
-          <img src="./National Parks Portal/Images/pngwing.com (8).png" alt="Khunjerab Animals Logo">
+          <img src="Images/pngwing.com (8).png" alt="Khunjerab Animals Logo">
         </div>
         <div class="button-logo">
-          <img src="./National Parks Portal/Images/pngwing.com (9).png" alt="Khunjerab Birds Logo">
+          <img src="Images/pngwing.com (9).png" alt="Khunjerab Birds Logo">
         </div>
       </div>
       <div class="buttons">
-        <a href="./National Parks Portal/khunjerab.html" class="btn-wildlife">Animals</a>
-        <a href="./National Parks Portal/khunjerabbirds.html" class="btn-wildlife">Birds</a>
+        <a href="khunjerab.html" class="btn-wildlife">Animals</a>
+        <a href="khunjerabbirds.html" class="btn-wildlife">Birds</a>
       </div>
     </div>
   </section>
@@ -888,31 +888,31 @@ footer p {
     <h2>Explore Park Maps</h2>
     <div class="map-cards">
       <div class="map-card">
-        <img src="./National Parks Portal/Images/LalSuhanra.png" alt="Lal Suhanra National Park Map">
+        <img src="Images/LalSuhanra.png" alt="Lal Suhanra National Park Map">
         <h3>Lal Suhanra National Park Map</h3>
         <b><p>Map of Lal Suhanra, Located near Bahawalpur city, Punjab, along the Bahawalpur–Ahmedpur East Road.</p></b>
         <a href="https://maps.app.goo.gl/tvk1tbh28qHEpYxw6">View Map</a>
       </div>
       <div class="map-card">
-        <img src="./National Parks Portal/Images/AyubMap.png" alt="Ayub National Park Map">
+        <img src="Images/AyubMap.png" alt="Ayub National Park Map">
         <h3>Ayub National Park Map</h3>
         <b><p>Map of Ayub National Park, Situated on the Grand Trunk (GT) Road, Rawalpindi, Punjab, near the Ayub Stadium gardens, lakes, a zoo.</p></b>
         <a href="https://maps.app.goo.gl/RAo3BEiojztfBFAx9">View Map</a>
       </div>
       <div class="map-card">
-        <img src="./National Parks Portal/Images/kirtharmap.png" alt="Kirthar National Park Map">
+        <img src="Images/kirtharmap.png" alt="Kirthar National Park Map">
         <h3>Kirthar National Park Map</h3>
         <b><p>Map of Kirthar, Spans across Karachi West and Jamshoro districts, Sindh, along the Kirthar Mountain, Valleys & Desert Plains Range.</p></b>
         <a href="https://maps.app.goo.gl/njtFbeUZruPvCE9r8">View Map</a>
       </div>
       <div class="map-card">
-        <img src="./National Parks Portal/Images/AyubiaNatioanlMap.png" alt="Ayubia National Park Map">
+        <img src="Images/AyubiaNatioanlMap.png" alt="Ayubia National Park Map">
         <h3>Ayubia National Park Map</h3>
         <b><p>Map of Ayubia, Found in Abbottabad District, Khyber Pakhtunkhwa, in the Galyat region between Murree and Nathiagali.</p></b>
         <a href="https://maps.app.goo.gl/MX4agb8ArCkucD5i9">View Map</a>
       </div>
       <div class="map-card">
-        <img src="./National Parks Portal/Images/KhunjerabMap.png" alt="Khunjerab National Park Map">
+        <img src="Images/KhunjerabMap.png" alt="Khunjerab National Park Map">
         <h3>Khunjerab National Park Map</h3>
         <b><p>Map of Khunjerab, Located in Hunza, Gilgit-Baltistan, at the Pakistan–China border on the Karakoram Highway.</p></b>
         <a href="https://maps.app.goo.gl/VK3Nd9iYVoqnR4TP6">View Map</a>
@@ -930,19 +930,19 @@ footer p {
     <div class="footer-col">
       <h4>Info Pages</h4>
       <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./National Parks Portal/about.html">About</a></li>
-        <li><a href="./National Parks Portal/parks.html">Parks</a></li>
-        <li><a href="./National Parks Portal/sitemap.html">Sitemap</a></li>
-        <li><a href="./National Parks Portal/contact.html">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="parks.html">Parks</a></li>
+        <li><a href="sitemap.html">Sitemap</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
 
     <div class="footer-col">
       <h4>Animals And Birds</h4>
       <ul>
-        <li><a href="./National Parks Portal/animals.html">Animals</a></li>
-        <li><a href="./National Parks Portal/birds.html">Birds</a></li>
+        <li><a href="animals.html">Animals</a></li>
+        <li><a href="birds.html">Birds</a></li>
         
       </ul>
     </div>
@@ -950,11 +950,11 @@ footer p {
     <div class="footer-col">
       <h4>Explore Parks</h4>
       <ul>
-        <li><a href="./National Parks Portal/lalsuhanrapark.html">Lal Suhanra Park</a></li>
-        <li><a href="./National Parks Portal/ayubpark.html">Ayub National Park</a></li>
-        <li><a href="./National Parks Portal/kirtharpark.html">Kirthar National Park</a></li>
-        <li><a href="./National Parks Portal/ayubiapark.html">Ayubia National Park</a></li>
-        <li><a href="./National Parks Portal/khunjerabpark.html">Khunjerab National Park</a></li>
+        <li><a href="lalsuhanrapark.html">Lal Suhanra Park</a></li>
+        <li><a href="ayubpark.html">Ayub National Park</a></li>
+        <li><a href="kirtharpark.html">Kirthar National Park</a></li>
+        <li><a href="ayubiapark.html">Ayubia National Park</a></li>
+        <li><a href="khunjerabpark.html">Khunjerab National Park</a></li>
       </ul>
     </div>
   </div>
