--- a/National Parks Portal/aubiya.html
+++ b/National Parks Portal/aubiya.html
@@ -312,6 +312,28 @@
       font-family: 'Poppins', sans-serif;
       font-weight: 700;
     }
+    .modal-content
+     {
+      background: white;
+      padding: 20px;
+      max-width: 600px;
+      width: 90%;
+      border-radius: 10px;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+      text-align: center;
+      position: relative;
+      font-family: 'Poppins', sans-serif;
+      
+    }
+    .modal-content img 
+    {
+      width: 100%;
+      height: auto;
+      max-height: 300px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-bottom: 15px;
+    }
     .animal-card p, .reptile-card p 
     {
       font-weight: bold;
