--- a/National Parks Portal/khunjerab.html
+++ b/National Parks Portal/khunjerab.html
@@ -277,7 +277,7 @@
     .animal-cards 
     {
      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* ✅ responsive grid */
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
      gap: 20px;
      max-width: 1200px;
      margin: 20px auto;
