--- a/index.html
+++ b/index.html
@@ -263,7 +263,18 @@
       height: 700px;
       position: relative;
     }
-
+    .hero .overlay {
+ 
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%;
+       height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
     .hero h1 
     {
       font-family: "Bebas Neue", sans-serif;
