--- a/index.html
+++ b/index.html
@@ -259,11 +259,11 @@
 
     .hero 
     {
+      background: url("./National\ Parks\ Portal/images/Deeeeers.jpg") no-repeat center center/cover;
       height: 700px;
       position: relative;
     }
     .hero .overlay {
-      background: url("./National\ Parks\ Portal/images/Deeeeers.jpg") no-repeat center center/cover;
  
       position: absolute;
       top: 0; left: 0;
@@ -470,7 +470,7 @@
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      background-image: url("./National\ Parks\ Portal/images/animals and birds in forest .jpg");
+      background-image: url(./National\ Parks\ Portal/Deeeeers);
       position: relative;
     }
     .button-logos 
